--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,76 @@ body {
     font-family: sans-serif;
     color: #fff;
     background: #000;
+    margin: 1rem;
 }
 img {
     max-width: 100%; /* DO NOT delete or change this line */
 }
 
+#cougar {
+  background: #B26219;
+  color: #000000;
+}
+
+#lion {
+  background: #FFD5AE;
+  color: #000000;
+
+}
+
+#tiger {
+background: #FFBD82;
+color: #000000;
+}
+
+
+img {
+max-width: 100%;
+}
+
+article {
+  max-width: 700px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+
+}
+
+section.text {
+background: #f0f0f0;
+padding: 2rem;
+font-size: 14pt;
+line-height: 2;
+}
+
+h2{
+  text-align:center;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background: #333;
+  padding: 0 1rem;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+
+}
+
+ul li{
+  margin: 0;
+  margin-left: 1rem;
+  background: #000;
+  padding: 1rem;
+}
+
+footer {
+  text-align: center;
+  background: #333;
+}
 /* ----- SUGGESTED COLORS -----
     - ARTICLES
     B26219 cinnamon
